# gentest

./: Dockerfile  Makefile  README.md  docker-compose.yml  exigences.md  pyproject.toml
.streamlit/: config.toml
log/: .gitignore
src/anonyx/: __init__.py  app.py
src/anonyx/core/: __init__.py  _warnings.py  bivariate.py  correlations.py  generator.py  loader.py  logger.py  profiler.py  validator.py
src/anonyx/ui/: _synt_cell_patch.py.bak  components.py  layout.py  page_home.py  page_stats.py
src/gentest/: __init__.py  app.py
src/gentest/core/: correlations.py  generator.py  loader.py  profiler.py  validator.py
src/gentest/ui/: components.py  layout.py
