[project]
name = "gentest"
version = "0.0.1"
description = "Générateur de fichier tests"
authors = [
    {name = "Thierry HUET",email = "thierry.huet@aperto-nota.fr"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
